# pyannote-whisper-diarization

./: .gitignore  README.en.md  README.md  README_CN.md  app.py  config.yaml  dump.rdb  pyproject.toml  requirements.txt  run.sh  speakers.py
config/: llm_model.env
core/: __init__.py  config.py  diarize.py  embedding.py  pipeline.py  transcribe.py
core/audio/: __init__.py  config.py  diarize.py  embedding.py  pipeline.py  transcribe.py
core/llm/: __init__.py  llm_client.py  refine_pipeline.py
core/metrics/: __init__.py  tseda_metrics.py
prompts/: __init__.py  correct_text.py  eval_and_sug.py  infer_speaker.py  refine.py
rag_tseda/: __init__.py  prompt.py  recall.py
rag_tseda/data/: T_SEDA_label_methods.csv  eval_steps.md
rag_tseda/vector_store_tseda/: index.faiss  index.pkl
routers/: embedding.py  health.py  live.py  transcribe.py
routers/audio/: __init__.py  embedding.py  live.py  transcribe.py
routers/llm/: __init__.py  correct.py  eval_suggestion.py  guess_speakers.py  label.py  metrics.py  refine.py
scripts/test/: README.md  test_client_disconnect.py  test_label_api.py  test_live_transcribe.py  test_refine.py  test_refine_api.py  test_transcribe.py  test_transcribe_stream.py
scripts/test/api/: test_client_disconnect.py  test_label_api.py  test_live_transcribe.py  test_metrics_api.py  test_refine.py  test_refine_api.py  test_transcribe.py  test_transcribe_stream.py
scripts/test/pipeline/: deep_pipeline_config.yaml  shallow_pipeline_config.yaml  test_deep_pipeline.py  test_shallow_pipeline.py
static/: live.html
utils/: common.py  errors.py
